<resources>
    <string name="app_name">AppSeries</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tbHome">Home</string>
    <string name="tbFavorites">Favorites</string>
    <string name="tbPerfil">Perfil</string>


    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_repassword">Repeat password</string>
    <string name="action_sign_in">Sign</string>
    <string name="dont_have_account">Don\'t have account</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="first_name_user">Your name</string>
    <string name="empty_username">Please enter email</string>
    <string name="invalid_username">Not a valid email</string>
    <string name="empty_password">Please enter password</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>